--- a/css/contact.css
+++ b/css/contact.css
@@ -56,8 +56,8 @@ margin: 20px 20px;
 /* This is the start of my map container */
 
 .map {
-    width: 1440px;
-    height: 450px;
+    width: 100%;
+    height: 100%;
 }
 
 /* This is the end of my map container */
